Always show the vertical scrollbar in app developer tools. It will prevent some layout issues when search shows a few results. For example, on Windows, the layout of the content can be different with and without the scrollbar. We want to prevent that.
BUG=237300

Review URL: https://chromiumcodereview.appspot.com/16366005

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@204233 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 91b6842c1d7b4f6a8d3b64dea2910426a27f5146

--- a/chrome/browser/resources/apps_debugger/css/items.css
+++ b/chrome/browser/resources/apps_debugger/css/items.css
@@ -10,6 +10,10 @@ html {
   overflow: visible;
 }
 
+body {
+  overflow-y: scroll;
+}
+
 hr {
   color: rgb(115, 111, 110);
   margin: 15px 0;
